--- a/public/style.css
+++ b/public/style.css
@@ -4,3 +4,45 @@
  useThisFor DragTab ใช้คำสั่งด้านล่างสำหรับแท็บลาก
  -webkit-app-region:drag; 
 */
+body{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    background-color: black;
+    margin: 0;
+    display: flex;
+}
+.header{
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+    width: 30px;
+}
+a{
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: aliceblue;
+    cursor: pointer;
+}
+h1{
+    width: 30px;
+    height: calc(100vh - 90px);
+    -webkit-app-region:drag; 
+}
+#closeApp{
+    background-color: red;
+}
+#minApp{
+    background-color: blue;
+}
+#full-App{
+    background-color: green;
+}
+iframe{
+    border: none;
+    width: 95vw;
+}
